--- a/src/components/Pages/Dapp/Dapp.css
+++ b/src/components/Pages/Dapp/Dapp.css
@@ -14,6 +14,11 @@
     align-items: center;
 }
 
+.token-selector-container {
+    margin-bottom: 5vh;
+}
+
+
 .dapp-container {
     background: grey;
     display: flex;
