--- a/src/components/Pages/Overview/Overview.css
+++ b/src/components/Pages/Overview/Overview.css
@@ -1,3 +1,4 @@
+
 :root {
     --background: #191B1F;
     --button-primary: #0D6EFD;
@@ -12,6 +13,46 @@
 }
 
 
+.layer-02 {
+    z-index: 1;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-10%, -50%);
+    background: #D9D9D9;
+    width: 384px;
+    height: 216px;
+    border-radius: 18px;  
+}
+
+.layer-03 {
+    z-index: 1;
+    position: absolute;
+    top: 40%;
+    left: 45%;
+    transform: translate(-50%, -50%);
+    background: #D9D9D9;
+    width: 422px;
+    height: 237px;
+    border-radius: 18px;  
+}
+
+.layer-04 {
+    z-index: 1;
+    position: absolute;
+    top: 40%;
+    left: 75%;
+    transform: translate(-50%, -50%);
+    background: #D9D9D9;
+    width: 307px;
+    height: 172px;
+    border-radius: 18px;  
+}
+
+
+
+
+
 .grid-01 {
     position: relative;
     height: 100vh;
@@ -19,6 +60,7 @@
 }
 
 .layer-01 {
+    z-index: 2;
     position: absolute;
     margin-left: 8vw;
     left: 0px;
@@ -27,17 +69,27 @@
 }
 
 .layer-01-text-01 {
+    z-index: 2;
     font-size: 3.5rem;
     font-family: 'inter', 'sans-serif';
     font-weight: 600;
 }
 
 .layer-01-text-02 {
+    z-index: 2;
     font-size: 1.2rem;
     font-family: 'inter', 'sans-serif';
     font-weight: 300;
     display: block;
     text-align: right;
+}
+
+.layer-01-image {
+    z-index: -1;
+    position: absolute;
+    left: 0px;
+    bottom: -27px;
+    margin-left: 21vw;
 }
 
 .layer-02 {
@@ -70,25 +122,40 @@
 .grid-21 {
     background: var(--background);
     display: flex;
+    position: relative;
     justify-content: center;
     align-items: center;
     height: 40vh;
 }
 
+.layer-02-image {
+    z-index: 0;
+    position: absolute;
+    height: 300px;
+    width: 300px;
+    left: 0px;
+    margin-left: 15vw;
+}
+
 .description-01 {
+    z-index: 2;
     margin-right: 5vw;
     width: 25vw;
 }
 
 .infographic-01 {
+    z-index: 2;
     margin-left: 5vw;
     width: 30vw;
 }
 
 .grid-31{
+    position: relative;
     display: flex;
     justify-content: left;
 }
+
+
 
 .monetize-ai {
     font-size: 2.5rem;
@@ -101,22 +168,37 @@
 .grid-41 {
     background: var(--background);
     display: flex;
+    position: relative;
     justify-content: center;
     align-items: center;
     height: 40vh;
+    overflow: hidden;
 }
 
+.layer-04-image {
+    z-index: 0;
+    position: absolute;
+    height: 300;
+    width: 300px;
+    right: 0px;
+    margin-right: 30vw;
+}
 
 .description-02 {
+    z-index: 2;
     margin-left: 5vw;
     width: 25vw;
     
 }
 
 .infographic-02 {
+    z-index: 2;
     margin-right: 5vw;
     width: 30vw;
 }
+
+
+
 
 
 
