--- a/src/components/Pages/Dapp/Dapp.css
+++ b/src/components/Pages/Dapp/Dapp.css
@@ -14,19 +14,37 @@
     align-items: center;
 }
 
+.connectSetup {
+    display: none;
+}
+
+.connectSetup.active {
+    z-index: 4;
+    position: absolute;
+    color: white;
+    height: 100%;
+    width: 100%;
+    backdrop-filter: blur(5px);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .token-selector-container {
     margin-bottom: 5vh;
 }
 
 
 .dapp-container {
-    background: grey;
+    background: var(--background);
     display: flex;
     padding: 20px 20px 20px 20px;
     border-radius: 33px;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    background: #1F242D;
+    box-shadow: 0px 0px 30px #0D6EFD;
 }
 
 .chart-container{
@@ -37,11 +55,16 @@
 }
 
 .button-dapp {
-    background: blue;
-    border-radius: 10px;
+    background: var(--button-primary);
+    border: 3px solid var(--button-border);
+    border-radius: 12px;
     margin-top: 20px;
-    width: 100px;
-    height: 34px;
+    padding: 10px 10px 10px 10px;
+    white-space: nowrap;
+    color: white;
+    font-size: 1rem;
+    font-family: 'inter', 'sans-serif';
+    font-weight: 600;
 }
 
 li {
