--- a/src/components/Pages/Dapp/components/NavBarDapp/NavBarDapp.css
+++ b/src/components/Pages/Dapp/components/NavBarDapp/NavBarDapp.css
@@ -25,6 +25,26 @@
     transition: all 0.5s ease;
 }
 
+.account-info {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 2px solid var(--button-border);
+    padding: 5px 10px 5px 10px;
+    border-radius: 25px;
+    margin-right: 4vw;
+}
+
+.account-address {
+    color: white;
+}
+
+.avatar-icon {
+    margin-left: 10px;
+    height: 25px;
+    width: 25px;
+}
+
 .navbar-logo {
     justify-content: right;
     margin-left: 4vw;
