--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -3,12 +3,67 @@
     --background: #191B1F;
     --button-primary: #0D6EFD;
     --button-border: #15376C;
+    --background-secondary: #30343c;
 }
 
 
 .footer {
-    background: var(--button-primary);
+    background: #30343c;
     bottom: 0px;
     width: 100%;
-    height: 70px;
+    height: 80px;
+    overflow: hidden;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    color: white;
+}
+
+
+.footer-layer-1 {
+    font-family: 'Inter', sans-serif;
+    margin-left: 4vw;
+}
+.demo-text {
+    margin-bottom: 5px;
+    font-family: 'Inter', sans-serif;
+    font-weight: 600;
+}
+
+.opensource-text {
+    font-family: 'Inter', sans-serif;
+    font-weight: 400; 
+}
+
+.footer-layer-2 {
+    display: flex;
+    font-family: 'Inter', sans-serif;
+    margin-right: 4vw;
+
+}
+
+.github-item {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.github-text {
+    padding-right: 2vw;
+}
+.github-logo {
+    margin-right: 5px;
+    height: 20px;
+    width: 20px;
+}
+
+.iexec-item {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.iexec-logo {
+    margin-right: 5px;
+    height: 20px;
+    width: 20px;
 }
