--- a/src/components/Pages/Overview/Overview.css
+++ b/src/components/Pages/Overview/Overview.css
@@ -3,6 +3,7 @@
     --background: #191B1F;
     --button-primary: #0D6EFD;
     --button-border: #15376C;
+    --chart: #e8e8e8;
 }
 
 
@@ -12,54 +13,13 @@
     
 }
 
-
-.layer-02 {
-    z-index: 1;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-10%, -50%);
-    background: #D9D9D9;
-    width: 384px;
-    height: 216px;
-    border-radius: 18px;  
-}
-
-.layer-03 {
-    z-index: 1;
-    position: absolute;
-    top: 40%;
-    left: 45%;
-    transform: translate(-50%, -50%);
-    background: #D9D9D9;
-    width: 422px;
-    height: 237px;
-    border-radius: 18px;  
-}
-
-.layer-04 {
-    z-index: 1;
-    position: absolute;
-    top: 40%;
-    left: 75%;
-    transform: translate(-50%, -50%);
-    background: #D9D9D9;
-    width: 307px;
-    height: 172px;
-    border-radius: 18px;  
-}
-
-
-
-
-
-.grid-01 {
+.ov-grid-1 {
     position: relative;
     height: 100vh;
     width: 100%;
 }
 
-.layer-01 {
+.ov-layer-11 {
     z-index: 2;
     position: absolute;
     margin-left: 8vw;
@@ -68,14 +28,14 @@
     color: white;
 }
 
-.layer-01-text-01 {
+.ov-11-text-01 {
     z-index: 2;
     font-size: 3.5rem;
     font-family: 'inter', 'sans-serif';
     font-weight: 600;
 }
 
-.layer-01-text-02 {
+.ov-11-text-02 {
     z-index: 2;
     font-size: 1.2rem;
     font-family: 'inter', 'sans-serif';
@@ -84,7 +44,7 @@
     text-align: right;
 }
 
-.layer-01-image {
+.ov-11-image {
     z-index: -1;
     position: absolute;
     left: 0px;
@@ -92,25 +52,52 @@
     margin-left: 21vw;
 }
 
-.layer-02 {
+.ov-layer-12 {
+    z-index: 1;
     position: absolute;
-    margin-right: 4vw;
-    right: 0px;
-    bottom: 20vh;
-    
-    
+    top: 50%;
+    left: 50%;
+    transform: translate(-10%, -50%);
+    background: var(--chart);
+    width: 384px;
+    height: 216px;
+    border-radius: 18px;
+    box-shadow: 0px 0px 30px var(--background);  
 }
 
-.layer-02-image{
-    width: 40vw;
+.ov-layer-13 {
+    z-index: 1;
+    position: absolute;
+    top: 40%;
+    left: 45%;
+    transform: translate(-50%, -50%);
+    background: var(--chart);
+    width: 422px;
+    height: 237px;
+    border-radius: 18px;
+    box-shadow: 0px 0px 30px var(--background);  
 }
 
-.grid-51{
+.ov-layer-14 {
+    z-index: 1;
+    position: absolute;
+    top: 40%;
+    left: 75%;
+    transform: translate(-50%, -50%);
+    background: var(--chart);
+    width: 307px;
+    height: 172px;
+    border-radius: 18px;
+    box-shadow: 0px 0px 30px var(--background);  
+}
+
+.ov-grid-2{
+    margin-top: 4vh;
     display: flex;
     justify-content: right;
 }
 
-.all-decentralized {
+.ov-2-all-decentralized {
     font-size: 2.5rem;
     font-family: 'inter', 'sans-serif';
     font-weight: 600;
@@ -119,7 +106,7 @@
     text-align: end;
 }
 
-.grid-21 {
+.ov-grid-3 {
     background: var(--background);
     display: flex;
     position: relative;
@@ -128,7 +115,7 @@
     height: 40vh;
 }
 
-.layer-02-image {
+.ov-31-image {
     z-index: 0;
     position: absolute;
     height: 300px;
@@ -137,27 +124,29 @@
     margin-left: 15vw;
 }
 
-.description-01 {
+.ov-32-description {
     z-index: 2;
     margin-right: 5vw;
     width: 25vw;
 }
 
-.infographic-01 {
+.ov-33-infographic {
     z-index: 2;
     margin-left: 5vw;
     width: 30vw;
 }
 
-.grid-31{
+
+
+
+.ov-grid-4{
+    margin-top: 8vh;
     position: relative;
     display: flex;
     justify-content: left;
 }
 
-
-
-.monetize-ai {
+.ov-4-monetize-ai {
     font-size: 2.5rem;
     font-family: 'inter', 'sans-serif';
     font-weight: 600;
@@ -165,7 +154,7 @@
     margin-left: 8vw;
 }
 
-.grid-41 {
+.ov-grid-5 {
     background: var(--background);
     display: flex;
     position: relative;
@@ -175,7 +164,9 @@
     overflow: hidden;
 }
 
-.layer-04-image {
+
+
+.ov-51-image {
     z-index: 0;
     position: absolute;
     height: 300;
@@ -184,14 +175,14 @@
     margin-right: 30vw;
 }
 
-.description-02 {
+.ov-52-description {
     z-index: 2;
     margin-left: 5vw;
     width: 25vw;
     
 }
 
-.infographic-02 {
+.ov-53-infographic {
     z-index: 2;
     margin-right: 5vw;
     width: 30vw;
@@ -199,6 +190,92 @@
 
 
 
+
+@media screen and (max-width: 960px){
+
+    .ov-layer-12 {
+        left: 30%;
+        width: 70vw;
+        height: 30vh; 
+    }
+
+    .ov-layer-13 {
+        
+        width: 80vw;
+        height: 35vh; 
+    }
+
+.ov-layer-14 {
+    display: none;
+}
+
+.ov-11-text-02 {
+    
+    text-align: left;
+}
+
+.ov-layer-11 {
+    top: 60vh;
+    margin-top: 5vh;
+}
+
+.ov-grid-3 {
+    display: flex;
+    flex-direction: column;
+    height: 90vh;
+    margin-bottom: 0vh;
+}
+
+.ov-32-description {
+    width: 60vw;
+    margin: 0px 0px;
+}
+
+.ov-33-infographic {
+    width: 60vw;
+    margin-top: 7vh;
+    margin-bottom: 0vh;
+    margin-left: 0vw;
+    margin-right: 0vw;
+}
+
+.ov-grid-4 {
+    margin: 0vh 0vw;
+}
+
+.ov-2-all-decentralized {
+    font-size: 2rem;
+}
+.ov-4-monetize-ai {
+    width: 90vw;
+    margin: 0px 0px;
+    padding: 0vh 5vw;
+    font-size: 1.5rem;
+    white-space: normal;
+}
+
+.ov-grid-5 {
+    display: flex;
+    flex-direction: column;
+    height: 90vh;
+}
+
+.ov-53-infographic {
+    width: 60vw;
+    
+    margin-bottom: 0vh;
+    margin-left: 0vw;
+    margin-right: 0vw;
+}
+
+.ov-52-description {
+    width: 60vw;
+    margin-top: 7vh;
+    margin-left: 0vw;
+    margin-right: 0vw;
+}
+
+}
 
 
 
