--- a/src/components/Pages/Overview/Overview.css
+++ b/src/components/Pages/Overview/Overview.css
@@ -130,6 +130,40 @@
     width: 25vw;
 }
 
+
+.ov-32-description-container {
+    box-sizing: border-box;
+    z-index: 2;
+    margin-right: 5vw;
+    width: 300px;
+    height: 155px;
+
+    background: var(--background);
+    mix-blend-mode: normal;
+    border: 1px solid #757575;
+    border-radius: 18px;
+}
+
+.ov-32-description-title {
+    padding: 15px 10px 10px 10px;
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 19px;
+    color: #FFFFFF;
+}
+
+.ov-32-description-text {
+    padding: 0px 10px 10px 10px;
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 19px;
+    color: #A5A5A5;
+}
+
 .ov-33-infographic {
     z-index: 2;
     margin-left: 5vw;
@@ -184,12 +218,42 @@
 
 .ov-53-infographic {
     z-index: 2;
-    margin-right: 5vw;
-    width: 30vw;
+    margin-right: 10vw;
+    width: 35vw;
 }
 
+.ov-53-description-container {
+    box-sizing: border-box;
+    z-index: 2;
+    margin-left: 10vw;
+    width: 300px;
+    height: 155px;
 
+    background: var(--background);
+    mix-blend-mode: normal;
+    border: 1px solid #757575;
+    border-radius: 18px;
+}
 
+.ov-53-description-title {
+    padding: 20px 10px 10px 10px;
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 19px;
+    color: #FFFFFF;
+}
+
+.ov-53-description-text {
+    padding: 0px 10px 10px 10px;
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 19px;
+    color: #A5A5A5;
+}
 
 @media screen and (max-width: 960px){
 
@@ -225,6 +289,9 @@
     height: 90vh;
     margin-bottom: 0vh;
 }
+.ov-32-description-container {
+    margin: 0px;
+}
 
 .ov-32-description {
     width: 60vw;
@@ -233,7 +300,7 @@
 
 .ov-33-infographic {
     width: 60vw;
-    margin-top: 7vh;
+    margin-top: 10vh;
     margin-bottom: 0vh;
     margin-left: 0vw;
     margin-right: 0vw;
@@ -264,6 +331,12 @@
     width: 60vw;
     
     margin-bottom: 0vh;
+    margin-left: 0vw;
+    margin-right: 0vw;
+}
+
+.ov-53-description-container {
+    margin-top: 10vh;
     margin-left: 0vw;
     margin-right: 0vw;
 }
