--- a/src/components/Pages/Dapp/Dapp.css
+++ b/src/components/Pages/Dapp/Dapp.css
@@ -23,8 +23,8 @@
     z-index: 4;
     position: absolute;
     color: white;
-    height: 100%;
-    width: 100%;
+    height: 100vh;
+    width: 100vw;
     backdrop-filter: blur(5px);
     display: flex;
     justify-content: center;
@@ -55,7 +55,7 @@
     border-radius: 18px;    
 }
 
-.loading-grid {
+.loading-animation {
     margin-top: 10px;
     padding: 5px;
 }
