--- a/src/components/Pages/Overview/Overview.css
+++ b/src/components/Pages/Overview/Overview.css
@@ -159,8 +159,8 @@
     font-family: 'Inter';
     font-style: normal;
     font-weight: 400;
-    font-size: 18px;
-    line-height: 19px;
+    font-size: 1.1rem;
+    line-height: 22px;
     color: #A5A5A5;
 }
 
@@ -251,8 +251,8 @@
     font-family: 'Inter';
     font-style: normal;
     font-weight: 400;
-    font-size: 20px;
-    line-height: 25px;
+    font-size: 1.2rem;
+    line-height: 22px;
     color: #A5A5A5;
 }
 
