--- a/src/components/Pages/Overview/Overview.css
+++ b/src/components/Pages/Overview/Overview.css
@@ -140,8 +140,9 @@
 
     background: var(--background);
     mix-blend-mode: normal;
-    border: 1px solid #757575;
+    border: 0px solid #424853;;
     border-radius: 18px;
+    box-shadow: 0px 4px 25px rgba(0, 0, 0, 0.25);
 }
 
 .ov-32-description-title {
@@ -232,8 +233,9 @@
 
     background: var(--background);
     mix-blend-mode: normal;
-    border: 1px solid #757575;
+    border: 0px solid #424853;;
     border-radius: 18px;
+    box-shadow: 0px 4px 25px rgba(0, 0, 0, 0.25);
 }
 
 .ov-53-description-title {
