--- a/src/components/Pages/Overview/Overview.css
+++ b/src/components/Pages/Overview/Overview.css
@@ -138,7 +138,7 @@
     width: 390px;
     height: 201px;
 
-    background: var(--background);
+    background: #24272e;
     mix-blend-mode: normal;
     border: 0px solid #424853;;
     border-radius: 18px;
@@ -162,7 +162,7 @@
     font-weight: 400;
     font-size: 1.1rem;
     line-height: 22px;
-    color: #A5A5A5;
+    color: #cfcfcf;
 }
 
 .ov-33-infographic {
@@ -231,7 +231,7 @@
     width: 390px;
     height: 201px;
 
-    background: var(--background);
+    background: #24272e;
     mix-blend-mode: normal;
     border: 0px solid #424853;;
     border-radius: 18px;
