--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -11,7 +11,7 @@
     background: #30343c;
     bottom: 0px;
     width: 100%;
-    height: 10vh;
+    height: 90px;
     overflow: hidden;
     display: flex;
     justify-content: space-between;
