--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -68,3 +68,11 @@
     height: 20px;
     width: 20px;
 }
+
+
+@media screen and (max-width: 960px){
+
+    .footer {
+        height: 100px;
+    }
+}
