--- a/src/components/Pages/Overview/Overview.css
+++ b/src/components/Pages/Overview/Overview.css
@@ -257,6 +257,22 @@
     color: #A5A5A5;
 }
 
+@media screen and (max-width: 450px){
+    .ov-32-description-container {
+        margin: 0px;
+        height: 30vh;
+        width: 90vw;
+    }
+
+    .ov-53-description-container{
+        margin-top: 10vh;
+        height: 32vh;
+        width: 90vw;
+        margin-left: 0vw;
+        margin-right: 0vw;
+    }
+    
+}
 @media screen and (max-width: 960px){
 
     .ov-layer-12 {
