--- a/src/components/Pages/Dapp/Dapp.css
+++ b/src/components/Pages/Dapp/Dapp.css
@@ -5,7 +5,7 @@
     --inactive-border: #474747;
 }
 
-.dapp-layout-1 {
+.dapp-container-1 {
     width: 100vw;
     height: 90vh;
     display: flex;
@@ -35,11 +35,18 @@
     margin-bottom: 5vh;
 }
 
+.dapp-layout{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
 
-.dapp-container {
+.dapp-box {
     background: var(--background);
     display: flex;
     padding: 20px 20px 20px 20px;
+    width: 425px;
+    height: 330px;
     border-radius: 33px;
     flex-direction: column;
     justify-content: center;
@@ -48,10 +55,41 @@
     box-shadow: 0px 0px 30px #000000;
 }
 
-.chart-container{
+.aitracker-box{
+    margin-left: 20px;
+    border-radius: 33px;
+    background: #1F242D;
+    box-shadow: 0px 0px 30px #000000;
+    width: 250px;
+    height: 330px;
+}
+
+.aitracker-title-layout{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 30px;
+}
+
+.aitracker-title{
+    margin-left: 10px;
+    color: white;
+}
+
+.aitracker-logo{
+    width: 35px;
+}
+
+.aitracker-list{
+    margin-left: 30px;
+    margin-top: 20px;
+    color: rgb(182, 182, 182);
+}
+
+.chart-box{
     background: var(--background);
-    width: 384px;
-    height: 216px;
+    width: 380px;
+    height: 297px;
     border-radius: 18px;    
 }
 
