--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,10 @@
+:root {
+  --background: #191B1F;
+  --button-primary: #0D6EFD;
+  --accent-color: #1441f5;
+  --button-border: #15376C;
+}
+
 * {
   box-sizing: border-box;
   margin: 0;
@@ -9,3 +16,8 @@ html, body {
   max-width: 100%;
   overflow-x: hidden;
 }
+
+
+a{
+  color: var(--accent-color)
+} 
